@@ -8,6 +8,7 @@ import org.finmate.member.domain.enums.SpeedTag;
 import org.finmate.member.domain.enums.StrategyTag;
 import org.finmate.member.domain.enums.ValueTag;
 import org.finmate.member.dto.UserInfoDTO;
+import org.finmate.member.mapper.AnimalCharacterMapper;
 import org.finmate.member.mapper.UserInfoMapper;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
@@ -16,6 +17,7 @@ import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Optional;
 import java.util.Random;
+import java.util.stream.Collectors;
 
 @Service
 @RequiredArgsConstructor
@@ -23,6 +25,7 @@ public class AssessmentServiceImpl implements AssessmentService{
 
     private final AssessmentMapper assessmentMapper;
     private final UserInfoMapper userInfoMapper;
+    private final AnimalCharacterMapper animalCharacterMapper;
 
     @Override
     public List<AssessmentDTO> loadAssessment() {
@@ -30,7 +33,7 @@ public class AssessmentServiceImpl implements AssessmentService{
         return assessmentMapper.getList()
                 .stream()
                 .map(AssessmentDTO::from)
-                .toList();
+                .collect(Collectors.toList());
 
     }
 
@@ -51,35 +54,17 @@ public class AssessmentServiceImpl implements AssessmentService{
         /**
          * 사용자 성향 요약
          */
-        String[] stable = {"소심한", "느긋한"};
-        String[] delicate  = {"신중한", "섬세한"};
-        String[] neutrality = {"현실적인", "전략적인"};
-        String[] active = {"도전적인", "과감한"};
-        String[] offensive = {"용맹한", "에너지 넘치는"};
-
         // 1번 문항 + 2번 문항 + 6번 문항 + 7번 문항 만 계산.
         double sum = (double) (choice.get(0) + choice.get(1) + choice.get(5) + choice.get(6)) / 4;
         String profileSummary = "";
 
-        Random rnd = new Random();
-        String pick1 = stable[rnd.nextInt(stable.length)];
-        String pick2 = delicate[rnd.nextInt(delicate.length)];
-        String pick3 = neutrality[rnd.nextInt(neutrality.length)];
-        String pick4 = active[rnd.nextInt(active.length)];
-        String pick5 = offensive[rnd.nextInt(offensive.length)];
-
-        if(sum < 0.6) profileSummary = pick1;
-        else if(sum >= 0.6 && sum < 1.2) profileSummary = pick2;
-        else if(sum >= 1.2 && sum < 1.8) profileSummary = pick3;
-        else if(sum >= 1.8 && sum < 2.4) profileSummary = pick4;
-        else if(sum >= 2.4 && sum <= 3.0) profileSummary = pick5;
+        profileSummary = getSummary(sum, profileSummary);
 
 
         /**
          * user_info 에 저장 및 캐릭터 생성
          */
-        Long[] animalIdList = {1L, 2L, 3L, 4L, 5L, 6L, 7L, 8L, 9L, 10L};
-        Long randomAnimal = animalIdList[rnd.nextInt(animalIdList.length)];
+        Long randomAnimal = animalCharacterMapper.randomCharacter();
 
         UserInfoVO userInfoVO = UserInfoVO
                 .builder()
@@ -97,5 +82,29 @@ public class AssessmentServiceImpl implements AssessmentService{
 
         userInfoMapper.insertUserInfo(userInfoVO);
         return Optional.ofNullable(UserInfoDTO.from(userInfoVO));
+    }
+
+    private static String getSummary(double sum, String profileSummary) {
+        String[] stable = {"소심한", "느긋한"};
+        String[] delicate  = {"신중한", "섬세한"};
+        String[] neutrality = {"현실적인", "전략적인"};
+        String[] active = {"도전적인", "과감한"};
+        String[] offensive = {"용맹한", "에너지 넘치는"};
+
+
+        Random rnd = new Random();
+        String pick1 = stable[rnd.nextInt(stable.length)];
+        String pick2 = delicate[rnd.nextInt(delicate.length)];
+        String pick3 = neutrality[rnd.nextInt(neutrality.length)];
+        String pick4 = active[rnd.nextInt(active.length)];
+        String pick5 = offensive[rnd.nextInt(offensive.length)];
+
+        if(sum < 0.6) profileSummary = pick1;
+        else if(sum >= 0.6 && sum < 1.2) profileSummary = pick2;
+        else if(sum >= 1.2 && sum < 1.8) profileSummary = pick3;
+        else if(sum >= 1.8 && sum < 2.4) profileSummary = pick4;
+        else if(sum >= 2.4 && sum <= 3.0) profileSummary = pick5;
+
+        return profileSummary;
     }
 }
